[tool.poetry]
name = "pytorchtutorial"
version = "0.1.0"
description = ""
authors = ["Lilli Nadol"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
scipy = "^1.13.0"
matplotlib = "^3.9.0"
scikit-learn = "^1.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
